# dotfiles

./: README.md  configfiles.drawio  install.sh  install_anyenv.sh  install_cdp.sh  jupyter_lab_config.py.linux  jupyter_lab_config.py.macos  latexmkrc  pyproject.toml  zshrc  zshrc.anyenv  zshrc.cdp
asdf/: README.md  install.sh
autokey/: autokey.json  install.sh
color_scheme/: README.md  builder.py  cleaner.py  install.sh  install_macosx.sh  install_ubuntu.sh  manage_color.drawio  sources.yaml  uninstall.sh  zshrc.color_scheme
fonts/: .gitignore  README.md  fc_list.py  install.sh  rename_ricty.py  ricty_discord_patcher.sh  set_gnome_terminal_font.py
gnome_terminal/: README.md  setup.py  uninstall.sh
hyper/: hyper.darwin.js  hyper.ubuntu.js  install.sh
jupyterlab/: README.md  flake8  install.sh  jupyter_lab_config.py.linux  jupyter_lab_config.py.macos  main.js  package.json
latex/: README.md  install.sh  install_latexmkrc.sh  latexmkrc  texmf.conf  uptex-noto-jp.map
opencode/: AGENTS.md  install.sh  opencode.json
powerline/: README.md  colors.json  config.json  install.sh  plugins.vim  prompt.zsh  status.conf  vimrc
tmux/: README.md  copy.macosx.conf  copy.ubuntu.conf  disable.sh  install.sh  status.conf  style.conf  tmux.conf  tmux.conf.macosx  tmux.conf.ubuntu  tmux.zsh
vim/: README.md  defaults.vim  gvimrc  install.sh  keymap.vim  keymaps.vim  plugins.vim  vimrc
wezterm/: README.md  install.sh  keybinds.lua  wezterm.lua
zcomp/: _cdp
zsh/: README.md  anyenv.zsh  cdp.zsh  fzf.zsh  install.sh  prompt.zsh  tmux.zsh  zshrc
(+206 files in other folders)
