[tool.poetry]
name = "dotfiles"
version = "0.9.7"
description = "preferences"
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
